--- a/package.json
+++ b/package.json
@@ -15,15 +15,17 @@
     "jest": "^26.4.2"
   },
   "dependencies": {
-    "@aws-cdk/aws-dynamodb": "^1.91.0",
+    "@aws-cdk/custom-resources": "1.70.0",
+    "@aws-cdk/aws-iam": "1.70.0",
+    "@aws-cdk/aws-dynamodb": "1.70.0",
     "@aws-cdk/aws-lambda": "1.70.0",
     "@aws-cdk/aws-lambda-nodejs": "1.70.0",
     "@aws-cdk/aws-s3": "1.70.0",
     "@aws-cdk/aws-s3-deployment": "1.70.0",
     "@aws-cdk/core": "1.70.0",
-    "aws-sdk": "^2.853.0",
-    "csvtojson": "^2.0.10",
-    "neat-csv": "^6.0.1"
+    "aws-sdk": "2.853.0",
+    "csvtojson": "2.0.10",
+    "neat-csv": "6.0.1"
   },
   "targets": {
     "cdk-lambda": {
