--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "build": "echo \"The build step is not required when using JavaScript!\" && exit 0",
     "cdk": "cdk",
     "test": "jest",
-    "lint": "npx eslint ."
+    "lint": "npx eslint .",
+    "build-ui": "react-scripts build",
+    "start-ui": "react-scripts start"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.70.0",
     "aws-cdk": "1.70.0",
     "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "jest": "^26.4.2"
+    "eslint-plugin-import": "^2.22.1"
   },
   "dependencies": {
     "@aws-cdk/custom-resources": "1.70.0",
@@ -29,7 +30,10 @@
     "@aws-cdk/core": "1.70.0",
     "aws-sdk": "2.853.0",
     "csvtojson": "2.0.10",
-    "neat-csv": "6.0.1"
+    "neat-csv": "6.0.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-scripts": "4.0.1"
   },
   "targets": {
     "cdk-lambda": {
