--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ node_modules
 
 # CDK asset staging directory
 .cdk.staging
-cdk.out
+vanity-number-package
 
 # Parcel default cache directory
 .parcel-cache
